build: add selected option

--- a/test/index.html
+++ b/test/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Datepicker</title>
-    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.4.0.css">
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
     <link rel="stylesheet" href="../dist/datepicker.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <script src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="../dist/datepicker.js"></script>
     <script src="js/main.js"></script>
 
@@ -28,6 +28,7 @@
     <script src="options/endDate.js"></script>
     <script src="options/startView.js"></script>
     <script src="options/filter.js"></script>
+    <script src="options/beforeShowDay.js"></script>
 
     <!-- Methods -->
     <script src="methods/show.js"></script>
